[package]
name = "pistas_scotland"
version = "0.9.2"
authors = ["Igorfs10 <igorfs10@gmail.com>"]
edition = "2018"
repository = "https://github.com/igorfs10/pistas_scotland"
description = "Um site para ver as pistas do Scotland Yard em WebAssembly usando Rust."
homepage = "https://igorfs10.github.io/pistas_scotland/index.html"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2.68"
wasm-bindgen-futures = "^0.4.18"
futures = "^0.3.7"

[dependencies.web-sys]
version = "^0.3.45"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlAudioElement"
]